DAOs Asistente y Campamentos en pruebas

--- a/sigmaCamp/.classpath
+++ b/sigmaCamp/.classpath
@@ -6,10 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/home/lviz/Documents/uco/3o_inf/1er_cuatri/PW/practs/programacion-web/sigmaCamp/lib/mysql-connector.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="/home/lviz/Documents/uco/3o_inf/1er_cuatri/PW/practs/programacion-web/sigmaCamp/lib/mysql-connector.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
