Depurando dao de actividades

--- a/sigmaCamp/bin/sql.properties
+++ b/sigmaCamp/bin/sql.properties
@@ -1,20 +1,20 @@
 # Queries tabla Asistente
-INSERT_ASISTENTE = "INSERT INTO Asistente (Identificador, Nombre, Apellidos, FechaNacimiento, RequiereAtencionEspecial) VALUES (%s, %s, %s, %s, %s)"
-UPDATE_ASISTENTE = "UPDATE Asistente SET Nombre = %s, Apellidos = %s, FechaNacimiento = %s, RequiereAtencionEspecial = %s WHERE Identificador = %s"
-DELETE_ASISTENTE = "DELETE FROM Asistente WHERE Identificador = %s"
-SELECT_ALL_ASISTENTE = "SELECT * FROM Asistente"
-SELECT_ID_ASISTENTE = "SELECT * FROM Asistente WHERE Identificador = %s"
+INSERT_ASISTENTE = INSERT INTO Asistente (Identificador, Nombre, Apellidos, FechaNacimiento, RequiereAtencionEspecial) VALUES (?, ?, ?, ?, ?)
+UPDATE_ASISTENTE = UPDATE Asistente SET Nombre = ?, Apellidos = ?, FechaNacimiento = ?, RequiereAtencionEspecial = ? WHERE Identificador = ?
+DELETE_ASISTENTE = DELETE FROM Asistente WHERE Identificador = ?
+SELECT_ALL_ASISTENTE = SELECT * FROM Asistente
+SELECT_ID_ASISTENTE = SELECT * FROM Asistente WHERE Identificador = ?
 
 # Queries tabla Campamento
-INSERT_CAMPAMENTO = "INSERT INTO Campamento (Identificador, FechaInicio, FechaFin, NivelEducativo, NumeroMaximoAsistentes) VALUES (%s, %s, %s, %s, %s)"
-UPDATE_CAMPAMENTO = "UPDATE Campamento SET FechaInicio = %s, FechaFin = %s, NivelEducativo = %s, NumeroMaximoAsistentes = %s WHERE Identificador = %s"
-DELETE_CAMPAMENTO = "DELETE FROM Campamento WHERE Identificador = %s"
-SELECT_ALL_CAMPAMENTO = "SELECT * FROM Campamento"
-SELECT_ID_CAMPAMENTO = "SELECT * FROM Campamento WHERE Identificador = %s"
+INSERT_CAMPAMENTO = INSERT INTO Campamento (Identificador, FechaInicio, FechaFin, NivelEducativo, NumeroMaximoAsistentes) VALUES (?, ?, ?, ?, ?)
+UPDATE_CAMPAMENTO = UPDATE Campamento SET FechaInicio = ?, FechaFin = ?, NivelEducativo = ?, NumeroMaximoAsistentes = ? WHERE Identificador = ?
+DELETE_CAMPAMENTO = DELETE FROM Campamento WHERE Identificador = ?
+SELECT_ALL_CAMPAMENTO = SELECT * FROM Campamento
+SELECT_ID_CAMPAMENTO = SELECT * FROM Campamento WHERE Identificador = ?
 
 # Queries tabla Actividad
-INSERT_ACTIVIDAD = "INSERT INTO Actividad (Identificador, Nombre, NivelEducativo, Horario, NumeroMaximoParticipantes, NumeroMonitoresNecesarios) VALUES (%s, %s, %s, %s, %s, %s)"
-UPDATE_ACTIVIDAD = "UPDATE Actividad SET Nombre = %s, NivelEducativo = %s, Horario = %s, NumeroMaximoParticipantes = %s, NumeroMonitoresNecesarios = %s WHERE Identificador = %s"
-DELETE_ACTIVIDAD = "DELETE FROM Actividad WHERE Identificador = %s"
-SELECT_ALL_ACTIVIDAD = "SELECT * FROM Actividad"
-SELECT_NOMBRE_ACTIVIDAD = "SELECT * FROM Actividad WHERE Nombre = %s"
+INSERT_ACTIVIDAD = INSERT INTO Actividad (Nombre, NivelEducativo, Horario, NumeroMaximoParticipantes, NumeroMonitoresNecesarios) VALUES (?, ?, ?, ?, ?)
+UPDATE_ACTIVIDAD = UPDATE Actividad SET Nombre = ?, NivelEducativo = ?, Horario = ?, NumeroMaximoParticipantes = ?, NumeroMonitoresNecesarios = ? WHERE Nombre = ?
+DELETE_ACTIVIDAD = DELETE FROM Actividad WHERE Nombre = ?
+SELECT_ALL_ACTIVIDAD = SELECT * FROM Actividad
+SELECT_NOMBRE_ACTIVIDAD = SELECT * FROM Actividad WHERE Nombre = ?
