Todos los DAOs listos menos Monitor e Inscripcion

--- a/sigmaCamp/bin/sql.properties
+++ b/sigmaCamp/bin/sql.properties
@@ -1,13 +1,13 @@
 # Queries tabla Asistente
 INSERT_ASISTENTE = INSERT INTO Asistente (Identificador, Nombre, Apellidos, FechaNacimiento, RequiereAtencionEspecial) VALUES (?, ?, ?, ?, ?)
-UPDATE_ASISTENTE = UPDATE Asistente SET Nombre = ?, Apellidos = ?, FechaNacimiento = ?, RequiereAtencionEspecial = ? WHERE Identificador = ?
+UPDATE_ASISTENTE = UPDATE Asistente SET Identificador = ?, Nombre = ?, Apellidos = ?, FechaNacimiento = ?, RequiereAtencionEspecial = ? WHERE Identificador = ?
 DELETE_ASISTENTE = DELETE FROM Asistente WHERE Identificador = ?
 SELECT_ALL_ASISTENTE = SELECT * FROM Asistente
 SELECT_ID_ASISTENTE = SELECT * FROM Asistente WHERE Identificador = ?
 
 # Queries tabla Campamento
 INSERT_CAMPAMENTO = INSERT INTO Campamento (Identificador, FechaInicio, FechaFin, NivelEducativo, NumeroMaximoAsistentes) VALUES (?, ?, ?, ?, ?)
-UPDATE_CAMPAMENTO = UPDATE Campamento SET FechaInicio = ?, FechaFin = ?, NivelEducativo = ?, NumeroMaximoAsistentes = ? WHERE Identificador = ?
+UPDATE_CAMPAMENTO = UPDATE Campamento SET Identificador = ?, FechaInicio = ?, FechaFin = ?, NivelEducativo = ?, NumeroMaximoAsistentes = ? WHERE Identificador = ?
 DELETE_CAMPAMENTO = DELETE FROM Campamento WHERE Identificador = ?
 SELECT_ALL_CAMPAMENTO = SELECT * FROM Campamento
 SELECT_ID_CAMPAMENTO = SELECT * FROM Campamento WHERE Identificador = ?
