--- a/sigmaCamp/src/sql.properties
+++ b/sigmaCamp/src/sql.properties
@@ -18,3 +18,10 @@ UPDATE_ACTIVIDAD = UPDATE Actividad SET Nombre = ?, NivelEducativo = ?, Horario 
 DELETE_ACTIVIDAD = DELETE FROM Actividad WHERE Nombre = ?
 SELECT_ALL_ACTIVIDAD = SELECT * FROM Actividad
 SELECT_NOMBRE_ACTIVIDAD = SELECT * FROM Actividad WHERE Nombre = ?
+
+# Queries tabla Inscripcion
+INSERT_INSCRIPCION = INSERT INTO Inscripcion (AsistenteId, CampamentoId, FechaInscripcion, Precio, TipoInscripcion) VALUES (?, ?, ?, ?, ?);
+UPDATE_INSCRIPCION = UPDATE Inscripcion SET FechaInscripcion = ?, Precio = ?, TipoInscripcion = ? WHERE AsistenteId = ? AND CampamentoId = ?;
+DELETE_INSCRIPCION = DELETE FROM Inscripcion WHERE AsistenteId = ? AND CampamentoId = ?;
+SELECT_ALL_INSCRIPCION = SELECT * FROM Inscripcion;
+SELECT_ID_INSCRIPCION = SELECT * FROM Inscripcion WHERE AsistenteId = ? AND CampamentoId = ?;
