Todos los DAOs listos menos los métodos de búsqueda

--- a/sigmaCamp/src/sql.properties
+++ b/sigmaCamp/src/sql.properties
@@ -11,6 +11,8 @@ UPDATE_CAMPAMENTO = UPDATE Campamento SET Identificador = ?, FechaInicio = ?, Fe
 DELETE_CAMPAMENTO = DELETE FROM Campamento WHERE Identificador = ?
 SELECT_ALL_CAMPAMENTO = SELECT * FROM Campamento
 SELECT_ID_CAMPAMENTO = SELECT * FROM Campamento WHERE Identificador = ?
+INSERT_CAMPAMENTOMONITOR = INSERT INTO CampamentoMonitor (CampamentoId, MonitorId) VALUES (?, ?)
+INSERT_CAMPAMENTOACTIVIDAD = INSERT INTO CampamentoActividad (CampamentoId, ActividadId) VALUES (?, ?)
 
 # Queries tabla Actividad
 INSERT_ACTIVIDAD = INSERT INTO Actividad (Nombre, NivelEducativo, Horario, NumeroMaximoParticipantes, NumeroMonitoresNecesarios) VALUES (?, ?, ?, ?, ?)
@@ -18,6 +20,8 @@ UPDATE_ACTIVIDAD = UPDATE Actividad SET Nombre = ?, NivelEducativo = ?, Horario 
 DELETE_ACTIVIDAD = DELETE FROM Actividad WHERE Nombre = ?
 SELECT_ALL_ACTIVIDAD = SELECT * FROM Actividad
 SELECT_NOMBRE_ACTIVIDAD = SELECT * FROM Actividad WHERE Nombre = ?
+INSERT_ACTIVIDADMONITOR = INSERT INTO ActividadMonitor (ActividadId, MonitorId) VALUES (?, ?)
+
 
 # Queries tabla Inscripcion
 INSERT_INSCRIPCION = INSERT INTO Inscripcion (AsistenteId, CampamentoId, FechaInscripcion, Precio, TipoInscripcion) VALUES (?, ?, ?, ?, ?);
@@ -25,3 +29,10 @@ UPDATE_INSCRIPCION = UPDATE Inscripcion SET FechaInscripcion = ?, Precio = ?, Ti
 DELETE_INSCRIPCION = DELETE FROM Inscripcion WHERE AsistenteId = ? AND CampamentoId = ?;
 SELECT_ALL_INSCRIPCION = SELECT * FROM Inscripcion;
 SELECT_ID_INSCRIPCION = SELECT * FROM Inscripcion WHERE AsistenteId = ? AND CampamentoId = ?;
+
+# Queries tabla Monitor
+INSERT_MONITOR = INSERT INTO Monitor (Identificador, Nombre, Apellidos, EducadorEspecial) VALUES (?, ?, ?, ?)
+UPDATE_MONITOR = UPDATE Monitor SET Identificador = ?, Nombre = ?, Apellidos = ?, EducadorEspecial = ? WHERE Identificador = ?
+DELETE_MONITOR = DELETE FROM Monitor WHERE Identificador = ?
+SELECT_ALL_MONITOR = SELECT * FROM Monitor
+SELECT_ID_MONITOR = SELECT * FROM Monitor WHERE Identificador = ?
