Trabajando en Gestor de inscripciones

--- a/sigmaCamp/src/sql.properties
+++ b/sigmaCamp/src/sql.properties
@@ -29,6 +29,8 @@ UPDATE_INSCRIPCION = UPDATE Inscripcion SET FechaInscripcion = ?, Precio = ?, Ti
 DELETE_INSCRIPCION = DELETE FROM Inscripcion WHERE AsistenteId = ? AND CampamentoId = ?;
 SELECT_ALL_INSCRIPCION = SELECT * FROM Inscripcion;
 SELECT_ID_INSCRIPCION = SELECT * FROM Inscripcion WHERE AsistenteId = ? AND CampamentoId = ?;
+SELECT_ALL_INSCRIPCION_PARCIAL = SELECT * FROM Inscripcion WHERE TipoInscripcion = Parcial;
+SELECT_ALL_INSCRIPCION_COMPLETA = SELECT * FROM Inscripcion WHERE TipoInscripcion = Completa;
 
 # Queries tabla Monitor
 INSERT_MONITOR = INSERT INTO Monitor (Identificador, Nombre, Apellidos, EducadorEspecial) VALUES (?, ?, ?, ?)
