--- a/sigmaCamp/src/sql.properties
+++ b/sigmaCamp/src/sql.properties
@@ -31,6 +31,7 @@ SELECT_ALL_INSCRIPCION = SELECT * FROM Inscripcion;
 SELECT_ID_INSCRIPCION = SELECT * FROM Inscripcion WHERE AsistenteId = ? AND CampamentoId = ?;
 SELECT_ALL_INSCRIPCION_PARCIAL = SELECT * FROM Inscripcion WHERE TipoInscripcion = Parcial;
 SELECT_ALL_INSCRIPCION_COMPLETA = SELECT * FROM Inscripcion WHERE TipoInscripcion = Completa;
+SELECT_COUNT_INSCRIPCION = SELECT COUNT(*) FROM Inscripcion WHERE CampamentoId = ?;
 
 # Queries tabla Monitor
 INSERT_MONITOR = INSERT INTO Monitor (Identificador, Nombre, Apellidos, EducadorEspecial) VALUES (?, ?, ?, ?)
