--- a/sigmaCamp/src/sql.properties
+++ b/sigmaCamp/src/sql.properties
@@ -11,8 +11,15 @@ UPDATE_CAMPAMENTO = UPDATE Campamento SET Identificador = ?, FechaInicio = ?, Fe
 DELETE_CAMPAMENTO = DELETE FROM Campamento WHERE Identificador = ?
 SELECT_ALL_CAMPAMENTO = SELECT * FROM Campamento
 SELECT_ID_CAMPAMENTO = SELECT * FROM Campamento WHERE Identificador = ?
-INSERT_CAMPAMENTOMONITOR = INSERT INTO CampamentoMonitor (CampamentoId, MonitorId) VALUES (?, ?)
-INSERT_CAMPAMENTOACTIVIDAD = INSERT INTO CampamentoActividad (CampamentoId, ActividadId) VALUES (?, ?)
+
+# Queries tabla CampamentoMonitor
+INSERT_CAMPAMENTO_MONITOR = INSERT INTO CampamentoMonitor (CampamentoId, MonitorId) VALUES (?, ?)
+SELECT_CAMPAMENTO_MONITOR = SELECT * FROM CampamentoMonitor (CampamentoId, MonitorId) VALUES (?, ?) WHERE CampamentoId = ?
+SELECT_MONITORES_CAMPAMENTO = SELECT * FROM CampamentoMonitor WHERE CampamentoId = ?
+
+# Queries tabla CampamentoActividad
+INSERT_CAMPAMENTO_ACTIVIDAD = INSERT INTO CampamentoActividad (CampamentoId, ActividadId) VALUES (?, ?)
+SELECT_CAMPAMENTO_ACTIVIDAD = SELECT * FROM CampamentoActividad (CampamentoId, ActividadNombre) VALUES (?, ?) WHERE CampamentoId = ?
 
 # Queries tabla Actividad
 INSERT_ACTIVIDAD = INSERT INTO Actividad (Nombre, NivelEducativo, Horario, NumeroMaximoParticipantes, NumeroMonitoresNecesarios) VALUES (?, ?, ?, ?, ?)
