--- a/sigmaCamp/src/sql.properties
+++ b/sigmaCamp/src/sql.properties
@@ -11,23 +11,26 @@ UPDATE_CAMPAMENTO = UPDATE Campamento SET Identificador = ?, FechaInicio = ?, Fe
 DELETE_CAMPAMENTO = DELETE FROM Campamento WHERE Identificador = ?
 SELECT_ALL_CAMPAMENTO = SELECT * FROM Campamento
 SELECT_ID_CAMPAMENTO = SELECT * FROM Campamento WHERE Identificador = ?
+SELECT_ALL_IDS_CAMPAMENTO = SELECT Identificador FROM Campamento
 
 # Queries tabla CampamentoMonitor
 INSERT_CAMPAMENTO_MONITOR = INSERT INTO CampamentoMonitor (CampamentoId, MonitorId) VALUES (?, ?)
-SELECT_CAMPAMENTO_MONITOR = SELECT * FROM CampamentoMonitor (CampamentoId, MonitorId) VALUES (?, ?) WHERE CampamentoId = ?
+SELECT_MONITOR_CAMPAMENTO = SELECT Monitor.* FROM Monitor JOIN CampamentoMonitor ON Monitor.Identificador = CampamentoMonitor.MonitorId WHERE CampamentoMonitor.CampamentoId = ? AND Monitor.Identificador = ?;
 SELECT_MONITORES_CAMPAMENTO = SELECT * FROM CampamentoMonitor WHERE CampamentoId = ?
 
 # Queries tabla CampamentoActividad
-INSERT_CAMPAMENTO_ACTIVIDAD = INSERT INTO CampamentoActividad (CampamentoId, ActividadId) VALUES (?, ?)
-SELECT_CAMPAMENTO_ACTIVIDAD = SELECT * FROM CampamentoActividad (CampamentoId, ActividadNombre) VALUES (?, ?) WHERE CampamentoId = ?
+INSERT_CAMPAMENTO_ACTIVIDAD = INSERT INTO CampamentoActividad (CampamentoId, ActividadNombre) VALUES (?, ?)
+SELECT_ACTIVIDAD_CAMPAMENTO = SELECT Actividad.* FROM Actividad JOIN CampamentoActividad ON Actividad.Nombre = CampamentoActividad.ActividadNombre WHERE CampamentoActividad.CampamentoId = ? AND Actividad.Nombre = ?;
+SELECT_ACTIVIDADES_CAMPAMENTO = SELECT Actividad.*  FROM Actividad  JOIN CampamentoActividad ON Actividad.Nombre = CampamentoActividad.ActividadNombre  WHERE CampamentoActividad.CampamentoId = ?
 
 # Queries tabla Actividad
 INSERT_ACTIVIDAD = INSERT INTO Actividad (Nombre, NivelEducativo, Horario, NumeroMaximoParticipantes, NumeroMonitoresNecesarios) VALUES (?, ?, ?, ?, ?)
 UPDATE_ACTIVIDAD = UPDATE Actividad SET Nombre = ?, NivelEducativo = ?, Horario = ?, NumeroMaximoParticipantes = ?, NumeroMonitoresNecesarios = ? WHERE Nombre = ?
 DELETE_ACTIVIDAD = DELETE FROM Actividad WHERE Nombre = ?
+DELETE_ACTIVIDAD_CAMPAMENTO = DELETE FROM CampamentoActividad WHERE ActividadNombre = ? AND CampamentoId = ?
 SELECT_ALL_ACTIVIDAD = SELECT * FROM Actividad
 SELECT_NOMBRE_ACTIVIDAD = SELECT * FROM Actividad WHERE Nombre = ?
-INSERT_ACTIVIDADMONITOR = INSERT INTO ActividadMonitor (ActividadId, MonitorId) VALUES (?, ?)
+INSERT_ACTIVIDAD_MONITOR = INSERT INTO ActividadMonitor (ActividadId, MonitorId) VALUES (?, ?)
 
 
 # Queries tabla Inscripcion
