--- a/sigmaCamp/src/sql.properties
+++ b/sigmaCamp/src/sql.properties
@@ -48,4 +48,6 @@ INSERT_MONITOR = INSERT INTO Monitor (Identificador, Nombre, Apellidos, Educador
 UPDATE_MONITOR = UPDATE Monitor SET Identificador = ?, Nombre = ?, Apellidos = ?, EducadorEspecial = ? WHERE Identificador = ?
 DELETE_MONITOR = DELETE FROM Monitor WHERE Identificador = ?
 SELECT_ALL_MONITOR = SELECT * FROM Monitor
+SELECT_ALL_MONITOR_ESPECIAL_CAMPAMENTO = SELECT Monitor.* FROM Monitor JOIN CampamentoMonitorEspecial ON Monitor.Identificador = CampamentoMonitorEspecial.MonitorId WHERE CampamentoMonitorEspecial.CampamentoId = ? AND Monitor.EducadorEspecial = true
 SELECT_ID_MONITOR = SELECT * FROM Monitor WHERE Identificador = ?
+SELECT_ALL_IDS_MONITOR = SELECT Identificador FROM Monitor
