--- a/sigmaCamp/bin/sql.properties
+++ b/sigmaCamp/bin/sql.properties
@@ -42,6 +42,7 @@ SELECT_ID_INSCRIPCION = SELECT * FROM Inscripcion WHERE AsistenteId = ? AND Camp
 SELECT_ALL_INSCRIPCION_PARCIAL = SELECT * FROM Inscripcion WHERE TipoInscripcion = Parcial;
 SELECT_ALL_INSCRIPCION_COMPLETA = SELECT * FROM Inscripcion WHERE TipoInscripcion = Completa;
 SELECT_COUNT_INSCRIPCION = SELECT COUNT(*) FROM Inscripcion WHERE CampamentoId = ?;
+SELECT_ALL_INSCRIPCION_BY_CAMPAMENTO = SELECT * FROM Inscripcion WHERE CampamentoId = ?;
 
 # Queries tabla Monitor
 INSERT_MONITOR = INSERT INTO Monitor (Identificador, Nombre, Apellidos, EducadorEspecial) VALUES (?, ?, ?, ?)
