--- a/sigmaCamp/bin/sql.properties
+++ b/sigmaCamp/bin/sql.properties
@@ -52,3 +52,4 @@ SELECT_ALL_MONITOR = SELECT * FROM Monitor
 SELECT_ALL_MONITOR_ESPECIAL_CAMPAMENTO = SELECT Monitor.* FROM Monitor JOIN CampamentoMonitorEspecial ON Monitor.Identificador = CampamentoMonitorEspecial.MonitorId WHERE CampamentoMonitorEspecial.CampamentoId = ? AND Monitor.EducadorEspecial = true
 SELECT_ID_MONITOR = SELECT * FROM Monitor WHERE Identificador = ?
 SELECT_ALL_IDS_MONITOR = SELECT Identificador FROM Monitor
+SELECT_MONITOR_ACTIVIDAD = SELECT * FROM Monitor JOIN ActividadMonitor ON Monitor.Identificador = ActividadMonitor.MonitorId WHERE ActividadMonitor.ActividadNombre = ? AND Monitor.Identificador = ?
