--- a/sigmaCamp/bin/sql.properties
+++ b/sigmaCamp/bin/sql.properties
@@ -30,7 +30,7 @@ DELETE_ACTIVIDAD = DELETE FROM Actividad WHERE Nombre = ?
 DELETE_ACTIVIDAD_CAMPAMENTO = DELETE FROM CampamentoActividad WHERE ActividadNombre = ? AND CampamentoId = ?
 SELECT_ALL_ACTIVIDAD = SELECT * FROM Actividad
 SELECT_NOMBRE_ACTIVIDAD = SELECT * FROM Actividad WHERE Nombre = ?
-INSERT_ACTIVIDAD_MONITOR = INSERT INTO ActividadMonitor (ActividadId, MonitorId) VALUES (?, ?)
+INSERT_ACTIVIDAD_MONITOR = INSERT INTO ActividadMonitor (ActividadNombre, MonitorId) VALUES (?, ?)
 
 
 # Queries tabla Inscripcion
