--- a/sigmaCamp/src/sql.properties
+++ b/sigmaCamp/src/sql.properties
@@ -49,7 +49,8 @@ INSERT_MONITOR = INSERT INTO Monitor (Identificador, Nombre, Apellidos, Educador
 UPDATE_MONITOR = UPDATE Monitor SET Identificador = ?, Nombre = ?, Apellidos = ?, EducadorEspecial = ? WHERE Identificador = ?
 DELETE_MONITOR = DELETE FROM Monitor WHERE Identificador = ?
 SELECT_ALL_MONITOR = SELECT * FROM Monitor
-SELECT_ALL_MONITOR_ESPECIAL_CAMPAMENTO = SELECT Monitor.* FROM Monitor JOIN CampamentoMonitorEspecial ON Monitor.Identificador = CampamentoMonitorEspecial.MonitorId WHERE CampamentoMonitorEspecial.CampamentoId = ? AND Monitor.EducadorEspecial = true
+SELECT_ALL_MONITOR_ESPECIAL = SELECT * FROM Monitor WHERE EducadorEspecial = true
+SELECT_ALL_MONITOR_ESPECIAL_CAMPAMENTO = SELECT m.* FROM Monitor m JOIN CampamentoMonitor cm ON m.Identificador = cm.MonitorId WHERE m.EducadorEspecial = true AND cm.CampamentoId = ?
 SELECT_ID_MONITOR = SELECT * FROM Monitor WHERE Identificador = ?
 SELECT_ALL_IDS_MONITOR = SELECT Identificador FROM Monitor
 SELECT_MONITOR_ACTIVIDAD = SELECT * FROM Monitor JOIN ActividadMonitor ON Monitor.Identificador = ActividadMonitor.MonitorId WHERE ActividadMonitor.ActividadNombre = ? AND Monitor.Identificador = ?
