--- a/sigmaCamp/src/sql.properties
+++ b/sigmaCamp/src/sql.properties
@@ -51,6 +51,7 @@ DELETE_MONITOR = DELETE FROM Monitor WHERE Identificador = ?
 SELECT_ALL_MONITOR = SELECT * FROM Monitor
 SELECT_ALL_MONITOR_ESPECIAL = SELECT * FROM Monitor WHERE EducadorEspecial = true
 SELECT_ALL_MONITOR_ESPECIAL_CAMPAMENTO = SELECT m.* FROM Monitor m JOIN CampamentoMonitor cm ON m.Identificador = cm.MonitorId WHERE m.EducadorEspecial = true AND cm.CampamentoId = ?
+SELECT_ALL_MONITOR_NO_ESPECIAL_CAMPAMENTO = SELECT m.* FROM Monitor m JOIN CampamentoMonitor cm ON m.Identificador = cm.MonitorId WHERE m.EducadorEspecial = false AND cm.CampamentoId = ?
 SELECT_ID_MONITOR = SELECT * FROM Monitor WHERE Identificador = ?
 SELECT_ALL_IDS_MONITOR = SELECT Identificador FROM Monitor
 SELECT_MONITOR_ACTIVIDAD = SELECT * FROM Monitor JOIN ActividadMonitor ON Monitor.Identificador = ActividadMonitor.MonitorId WHERE ActividadMonitor.ActividadNombre = ? AND Monitor.Identificador = ?
