--- a/sigma-camp/pom.xml
+++ b/sigma-camp/pom.xml
@@ -23,8 +23,8 @@
 
     <dependency>
       <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>3.0-alpha-1</version>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version>
     </dependency>
 
     <dependency>
