--- a/sigma-camp/pom.xml
+++ b/sigma-camp/pom.xml
@@ -21,6 +21,16 @@
 
   <dependencies>
 
+  <dependency>
+      <groupId>javax.json</groupId>
+      <artifactId>javax.json-api</artifactId>
+      <version>1.0</version>
+  </dependency>
+  <dependency>
+    <groupId>org.glassfish</groupId>
+    <artifactId>javax.json</artifactId>
+    <version>1.0.4</version>
+  </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
