--- a/sigma-camp/src/main/webapp/WEB-INF/web.xml
+++ b/sigma-camp/src/main/webapp/WEB-INF/web.xml
@@ -4,20 +4,10 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
-<!-- 
-  <error-page>
-    <error-code>500</error-code>
-    <location>/errorPages/error500.jsp</location>
-  </error-page> -->
 
-    <!-- <error-page>
-    <error-code>404</error-code>
-    <location>/errorPages/error404.jsp</location>
-  </error-page> -->
-<!-- 
 <error-page>
     <location>/index.jsp</location>
-</error-page> -->
+</error-page>
 
 <!-- controllers -->
 	<!-- common -->
